# fractus-atlas

./: .gitignore  .prettierrc.toml  .taurignore  Cargo.toml  README.md  dev.bat  format.bat  release.bat
.github/workflows/: main.yml
common/: Cargo.toml
common/src/: lib.rs
src/: cli_parsing.rs  configuration.rs  index.html  instructions.rs  logger.rs  main.css  main.html  main.js  main.rs  styles.css  user_data.rs  viewer.html  webserver.rs
src-front/: ai_prompt.css  ai_prompt.html  ai_prompt.js  index.css  index.html  index.js  settings.css  settings.html  settings.js  settings.mod.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: events.json
src-tauri/src/: main.rs
src-tauri/src/lib/: action.rs  mod.rs  settings.rs
src-wasm/: Cargo.toml  README.md
src-wasm/src/: input_controller.rs  input_view.rs  lib.rs  output_controller.rs  output_view.rs
src/window/: mod.rs
src/window/instructions_code/: browse_browsing_folders.rs  browse_target_folders.rs  do_move.rs  mod.rs  next.rs  open_current.rs  previous.rs  random.rs  set_browsing_folders.rs  set_position.rs  set_targets.rs  show_browse_folder_window.rs  show_browse_target.rs
