[workspace]
members = [
    "common",
    "src-tauri",
    "src-wasm"
]
resolver = "2"

[workspace.dependencies]
serde = "1.0.203"
serde_json = "1.0.117"
log = "0.4.21"

[workspace.lints.rust]
unused_parens = "allow"

[workspace.lints.clippy]
needless_return = "allow"
identity_op = "allow"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
unwrap_in_result = "deny"
