[workspace]
members = [
    "common",
    "src-tauri",
    "src-wasm"
]
resolver = "2"

[workspace.package]
version = "2.5.0"
authors = ["Jimskapt"]
edition = "2021"
repository = "https://github.com/Jimskapt/fractus-atlas"

[workspace.dependencies]
serde = "1.0.217"
serde_json = "1.0.135"
log = "0.4.22"

[workspace.lints.rust]
unused_parens = "allow"

[workspace.lints.clippy]
needless_return = "allow"
identity_op = "allow"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
unwrap_in_result = "deny"
