[package]
name = "fractus-atlas"
version = "2.0.0"
description = "An image viewer which allows you to quickly move them in folders."
homepage = "https://github.com/Jimskapt/fractus-atlas"
repository = "https://github.com/Jimskapt/fractus-atlas"
keywords = ["image", "images", "fast", "browsing", "viewer", "folder", "folders", "sort", "sorting"]
publish = false
authors = ["Jimskapt <rami.programmer@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fractus_atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib/mod.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
common = { path = "../common" }
tauri = { version = "2.0.0-beta.13", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
serde_json = "1.0"
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs", "time"] }
rand = "0.8.5"
trash = "3.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
