[package]
name = "fractus-atlas"
description = "An image viewer that lets you move images quickly into folders"
keywords = ["image", "images", "fast", "browsing", "viewer", "folder", "folders", "sort", "sorting"]
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fractus_atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib/mod.rs"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
common = { path = "../common" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }

tauri = { version = "2.2.1", features = [] }
tauri-plugin-shell = "2"
toml = "0.8.19"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "time"] }
rand = "0.8.5"
trash = "4.1.1"
encoding_rs = "0.8.35"
async-recursion = "1.1.1"
notify = "8.0.0"
futures = "0.3.31"
open = "5.3.2"
log4rs = "1.3.0"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true
